Traducción del contenido al español

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <title>URL-SHORTENER</title>
+    <title>ACORTADOR DE URL</title>
 </head>
 <body>
     <div class="container">
-        <h1>URL Shortener</h1>
-        <label for="originalURL">Enter URL to Shorten</label>
-        <input type="text" id="originalURL" placeholder="https://example.com">
+        <h1>Acortador de URL</h1>
+        <label for="originalURL">Ingrese URL para acortar</label>
+        <input type="text" id="originalURL" placeholder="https://ejemplo.com">
         <div class="button">
-            <button id="reload-btn">Reload</button>
-            <button id="short-btn">Shory it</button>
+            <button id="reload-btn">Recargar</button>
+            <button id="short-btn">Acortar</button>
         </div>
-        <label for="shortenUrlTextarea-btn">Shortened URL</label>
+        <label for="shortenUrlTextarea-btn">URL acortada</label>
         <textarea id="shortenUrlTextarea-btn" cols="30" rows="5" readonly>
         </textarea>
     </div>
     <script src="script.js"></script>
+
 </body>
 </html>
